  feature request.
- Fixed bug where -vvvv turned off verbose logging instead of making it even 
  more verbose. Thanks to Ian Bicking for the bug report.
- Fixed bug where assert inspection would fail when the trailing """ of a 
  docstring was one of the inspected lines. Thanks to cito at online dot de 
  for the bug report.

0.9.1

- New function nose.runmodule() finds and runs tests only in a 
  single module, which defaults to __main__ (like unittest.main() or 
  doctest.runmodule()). Thanks Greg Wilson for the suggestion.
- Multiple -w (--where) arguments can now be used in one command line,
  to find and run tests in multiple locations. Thanks Titus Brown for
  the suggestion.
- Multiple --include and --exclude arguments are now accepted in one command 
  line. Thanks Michal Kwiatkowski for the feature request.
- Coverage will now include modules not imported by any test when
  using the new --cover-inclusive switch. Thanks James Casbon for the
  patch.
- module:TestClass test selections now properly select all tests in the test 
  class.
- startTest and stopTest are now called in plugins at the beginning and end of
  test suites, including test modules, as well as individual tests. Thanks 
  Michal Kwiatkowski for the suggestion.
- Fix bug in test selection when run as ``python setup.py test``: 'test' was 
  passing through and being used as the test name selection. Thanks Kumar 
  McMillan for the bug report.
- Fix bug in handling of -x/--stop option where the test run would stop on
  skipped or deprecated tests. Thanks Kumar McMillan for the bug report.
- Fix bug in loading tests from projects with layouts that place modules in
  /lib or /src dirs and tests in a parallel /tests dir.
- Fix bug in python version detection. Thanks Kevin Dangoor for the bug report 
  and fix.
- Fix log message in selector that could raise IndexError. Thanks Kumar 
  McMillan for the bug report and patch.